--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    dependencies {
+        compile fileTree(dir: 'libs', include: ['*.jar'])
+        compile 'com.android.support:appcompat-v7:24.0.1'
+
+        // add the following line, and replace "0.11.1" with the latest version
+        // of Estimote Android SDK; you'll find the latest version number on:
+        //   https://github.com/Estimote/Android-SDK/releases
+        compile 'com.estimote:sdk:0.11.1@aar'
+    }
 }
 
 dependencies {
